--- a/assinments/Css/02 Transition/case 01/index.html
+++ b/assinments/Css/02 Transition/case 01/index.html
@@ -5,6 +5,34 @@
     <title>Transition Case 01-</title>
     <link rel="stylesheet" href="../../../../assets/css/normalize.css">
     <meta content="width=device-width initial-scale=1" name="viewport">
+<style>
+    section {
+        width: 230px;
+        height: 500px;
+        top: 100px;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-around;
+        font-family: Ubuntu;
+        right: 175px;
+        position: relative;
+    }
+
+    section > div {
+        left: 0;
+        position: relative;
+        width: 100%;
+        height: 50px;
+        box-shadow: 4px 2px 7px 1px rgba(81, 66, 198, 0.62);
+        background-color: #2e1886;
+        color: #ffffff;
+        transition-property: all;
+        transition-duration: 1s;
+        cursor: pointer;
+    }
+    
+
+</style>
 
 </head>
 <body>
