--- a/assinments/Css/02 Transition/case 01/index.html
+++ b/assinments/Css/02 Transition/case 01/index.html
@@ -2,46 +2,83 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Transition Case 01-</title>
-    <link rel="stylesheet" href="../../../../assets/css/normalize.css">
+    <title>Transition Case 1 | IJSE</title>
     <meta content="width=device-width initial-scale=1" name="viewport">
-<style>
-    section {
-        width: 230px;
-        height: 500px;
-        top: 100px;
-        display: flex;
-        flex-direction: column;
-        justify-content: space-around;
-        font-family: Ubuntu;
-        right: 175px;
-        position: relative;
-    }
+    <link href="../../../../assets/css/normalize.css" rel="stylesheet">
 
-    section > div {
-        left: 0;
-        position: relative;
-        width: 100%;
-        height: 50px;
-        box-shadow: 4px 2px 7px 1px rgba(81, 66, 198, 0.62);
-        background-color: #2e1886;
-        color: #ffffff;
-        transition-property: all;
-        transition-duration: 1s;
-        cursor: pointer;
-    }
-    
+    <style>
 
-</style>
+        section {
+            width: 230px;
+            height: 500px;
+            position: relative;
+            top: 100px;
+            display: flex;
+            flex-direction: column;
+            justify-content: space-around;
+            font-family: Ubuntu;
+            right: 175px;
+        }
 
+        section > div {
+            left: 0;
+            position: relative;
+            height: 50px;
+            width: 100%;
+            background-color: #8715b4;
+            color: #ffffff;
+            box-shadow: 3px 2px 5px 1px #2b1d9e9e;
+            cursor: pointer;
+            transition-property: all;
+            transition-duration: 1s;
+        }
+
+        section > div > h3 {
+            padding-left: 10px;
+            position: absolute;
+            top: 0;
+            bottom: 0;
+            margin: auto;
+            height: max-content;
+        }
+
+        section > div > i {
+            position: absolute;
+            right: 15px;
+            top: 0;
+            bottom: 0;
+            height: max-content;
+            margin: auto;
+            font-size: 25px;
+        }
+
+
+    </style>
 </head>
 <body>
+
 <section>
-    <div></div>
-    <div></div>
-    <div></div>
-    <div></div>
-    <div></div>
+    <div>
+        <h3>Menu One</h3>
+    </div>
+
+    <div>
+        <h3>Menu Two</h3>
+    </div>
+
+    <div>
+        <h3>Menu Three</h3>
+    </div>
+
+    <div>
+        <h3>Menu Four</h3>
+    </div>
+
+    <div>
+        <h3>Menu Five</h3>
+    </div>
 </section>
+
+
 </body>
 </html>
