--- a/assinments/Css/02 Transition/case 01/index.html
+++ b/assinments/Css/02 Transition/case 01/index.html
@@ -5,6 +5,7 @@
     <title>Transition Case 1 | IJSE</title>
     <meta content="width=device-width initial-scale=1" name="viewport">
     <link href="../../../../assets/css/normalize.css" rel="stylesheet">
+    <!--image link-->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" integrity="sha512-9usAa10IRO0HhonpyAIVpjrylPvoDwiPUiKdWk5t3PyolY1cOd4DSE0Ga+ri4AuTroPR5aQvXU9xC6qOPnzFeg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
     <style>
@@ -77,14 +78,17 @@
 
     <div>
         <h3>Menu Three</h3>
+        <i class="fa-solid fa-book-atlas"></i>
     </div>
 
     <div>
         <h3>Menu Four</h3>
+        <i class="fa-solid fa-layer-group"></i>
     </div>
 
     <div>
         <h3>Menu Five</h3>
+        <i class="fa-solid fa-cart-arrow-down"></i>
     </div>
 </section>
 
