coulour change and finish case one

--- a/assinments/Css/02 Transition/case 01/index.html
+++ b/assinments/Css/02 Transition/case 01/index.html
@@ -27,15 +27,14 @@
             position: relative;
             height: 50px;
             width: 100%;
-            background-color: #8715b4;
+            background-color: #1d548b;
             color: #1d1818;
-            box-shadow: 3px 2px 5px 1px #2b1d9e9e;
+            box-shadow: 3px 2px 5px 1px rgba(20, 17, 43, 0.62);
             cursor: pointer;
             transition-property: all;
             transition-duration: 1s;
             border-radius: 10px;
         }
-
         section > div > h3 {
             padding-left: 10px;
             position: absolute;
@@ -55,8 +54,7 @@
             font-size: 25px;
         }
         section>div:hover{
-            /*background-color: #722df0;*/
-            left: 165px;
+            left: 180px;
             transition-property: all;
             transition-duration: 1s;
         }
@@ -91,7 +89,5 @@
         <i class="fa-solid fa-cart-arrow-down"></i>
     </div>
 </section>
-
-
 </body>
 </html>
