--- a/assinments/Css/01 Basic/case 01/index.html
+++ b/assinments/Css/01 Basic/case 01/index.html
@@ -74,7 +74,7 @@
             top: 0;
             border: 1px solid white;
             margin: auto;
-            background-color: white;q
+            background-color: white;
         }
         main>div:first-of-type>div{
             width: 120px;
