--- a/assinments/Css/01 Basic/case 05/assets/index.html
+++ b/assinments/Css/01 Basic/case 05/assets/index.html
@@ -4,6 +4,12 @@
     <meta charset="UTF-8">
     <title>case 05</title>
     <style>
+        ::-webkit-scrollbar{
+            width: 0px;
+        }
+        body{
+            margin: 0;
+        }
         section{
             width: 1200px;
             height: 600px;
