--- a/index.html
+++ b/index.html
@@ -3,85 +3,27 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
-    <link rel="Icon" href="26_generated.jpg">
-    <!--<base href="http://ijse.lk">-->
-
-    <meta name="keyword" content ="ijse,IJSE,gdse60,internet technology,GDSE60">
-    <meta name="description" content ="Software Engineering Institute in Sri Lanka">
-    <meta name="owner" content= "IJSE">
-    <meta name="author" content="Institute of Software Engineering">
-
+    <meta name="keyword" content ="personal,website,ijse,web,developer,ui,ux">
+    <meta name="description" content ="My personal website">
+    <meta name="owner" content= "milith">
+    <meta name="author" content="Milith">
     <meta name="viewport" content="width=device-width initial-scale=1 maximum-scale=2 minimum scale=1">
-    <meta name="theme-color" content="blue">
+    <meta name="theme-color" content="black">
+
+    <link rel="Icon" href="assets/img">
+    <link rel="stylesheet" href="assets/css/stylesheet.css">
+    <link rel="stylesheet" href="assets/css/normalize.css">
 </head>
 
 <body>
     <header>
-        <nav>
-
-        </nav>
+            <div>
+                <img alt="home image" src="assets/img/Profile/headerimg.PNG">
+            </div>
+            <nav>
+                <article></article>
+            </nav>
     </header>
-    <main>
-        <section>
-            <article>
 
-            </article>
-        </section>
-        <section>
-
-        </section>
-    </main>
-    <footer>
-     <pre>
-         Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-         Ab ad alias, autem ducimus ea eius eligendi excepturi facilis fuga,
-
-         illum nobis perferendis quia quibusdam quisquam sint
-         veniam voluptatem. At, voluptatibus.
-         Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab
-
-         beatae culpa ea, explicabo facilis incidunt labore minus nostrum suscipit
-         totam vel voluptates voluptatibus. Deserunt inventore perspiciatis rerum!
-         Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto commodi
-         debitis,
-         dicta facilis fugiat harum, impedit in iure
-         nobis quam quas quis sunt voluptatem. Asperiores doloribus harum ipsum quia velit?
-     </pre>
-        <hr>
-        <hr>
-        <p>Lorem ipsum dolor sit <a href="https://ijse.lk "target="_blank"> IJSE</a> amet, consectetur adipisicing elit.
-            Animi aspernatur <a href="tel:0112072829"> Contact Us</a>debitis doloremque nobis nostrum, optio rem?
-            Architecto at atque cupiditate dicta ducimus eaque natus nisi nulla,
-            placeat ratione soluta, tenetur.
-
-            <br>
-            <br>
-            <br>
-            <br>
-            <br>
-            <br>
-            <br>
-            <br>
-
-            Lorem <abbr title="Institute Of Software Engineering">IJSE</abbr> ipsum dolor sit amet, consectetur adipisicing elit. Est et
-            facilis hic laudantium nostrum quidem quo rerum. Ab, consectetur
-            deleniti eos, ipsam labore maiores, maxime perspiciatis
-            quam quas reprehenderit soluta?
-
-            <data value="100"<ol>home</ol></data>
-            <data value="200"<ol>adress</ol></data>
-            <ol>contact</ol>
-            <ol>about</ol>
-
-        <pre> Lorem ipsum dolor sit amet,
-            consectetur adipisicing elit.
-            A animi autem delectus
-            doloribus expedita fuga harum, inventore,
-            ipsam <cite> itaque laborum</cite>
-            modi necessitatibus placeat possimus,
-            quas rerum sunt veniam vitae voluptates.
-        </pre>
-        </p>
-    </footer>
 </body>
 </html>
