--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             </div>
             <nav>
                 <article>
-                    <a href="#about">About</a>
+                    <a href="#about" style="color: yellow">About</a>
                     <a href="#service">Education</a>
                     <a href="#skills">Portfolio</a>
                     <a href="#project">Service</a>
