Update page one content

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <link rel="Icon" href="assets/img">
     <link rel="stylesheet" href="assets/css/stylesheet.css">
     <link rel="stylesheet" href="assets/css/normalize.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com">
 </head>
 
 <body>
@@ -30,6 +31,13 @@
                 </article>
             </nav>
     </header>
+    <!--------------Main Profile ----------------------------->
+<main>
+        <section>
+            <div></div>
+            <div></div>
+        </section>
+</main>
 
 </body>
 </html>
