--- a/index.html
+++ b/index.html
@@ -31,10 +31,14 @@
                 </article>
             </nav>
     </header>
-    <!--------------Main Profile ----------------------------->
+    <!----------------------Main Profile ------------------------------>
 <main>
         <section>
-            <div></div>
+            <div>
+                <h class="intro1">I'm Ui/Ux Designer</h>
+                <h3 class="intro2">It is My Porfolio</h3>
+                <h5 class="intro3">Hello</h5>
+            </div>
             <div></div>
         </section>
 </main>
