--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
     <link rel="Icon" href="assets/img">
     <link rel="stylesheet" href="assets/css/stylesheet.css">
     <link rel="stylesheet" href="assets/css/normalize.css">
-    <link rel="stylesheet" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Concert+One&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -38,6 +40,7 @@
                 <h class="intro1">I'm Ui/Ux Designer</h>
                 <h3 class="intro2">It is My Porfolio</h3>
                 <h5 class="intro3">Hello</h5>
+                <button class="hireme">HIRE ME</button>
             </div>
             <div></div>
         </section>
