page one image Add

--- a/index.html
+++ b/index.html
@@ -42,7 +42,9 @@
                 <h5 class="intro3">Hello</h5>
                 <button class="hireme">HIRE ME</button>
             </div>
-            <div></div>
+            <div>
+                <img alt="My Profile Picture" src="assets/img/Profile/milith.PNG">
+            </div>
         </section>
 </main>
 
