Main page content Update

--- a/index.html
+++ b/index.html
@@ -16,6 +16,16 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Arima&display=swap" rel="stylesheet">
+    <!---Fornt for about section---->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Arima&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Arima&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Arima&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -34,19 +44,18 @@
             </nav>
     </header>
     <!----------------------Main Profile ------------------------------>
-<main>
+    <main>
         <section>
             <div>
-                <h class="intro1">I'm Ui/Ux Designer</h>
-                <h3 class="intro2">It is My Porfolio</h3>
-                <h5 class="intro3">Hello</h5>
-                <button class="hireme">HIRE ME</button>
+
             </div>
             <div>
-                <img alt="My Profile Picture" src="assets/img/Profile/milith.PNG">
+
+            </div>
+            <div>
+
             </div>
         </section>
-</main>
-
+    </main>
 </body>
 </html>
