--- a/index.html
+++ b/index.html
@@ -47,15 +47,29 @@
     <main>
         <section>
             <div>
-
+                <h class="intro1">I'm Ui/Ux Designer</h>
+                <h3 class="intro2">It is My Porfolio</h3>
+                <h5 class="intro3">Hello</h5>
+                <button class="hireme">HIRE ME</button>
             </div>
             <div>
-
+                <img alt="My Profile Picture" src="assets/img/Profile/milith.PNG">
             </div>
             <div>
-
+                <a href="https://www.behance.net/milithdesilva" target="_blank">
+                    <i class="fa-brands fa-behance"></i></a>
             </div>
         </section>
     </main>
+    <!---------------------- About Section ----------------------->
+    <section>
+
+        <div>
+            <h2>ABOUT</h2>
+        </div>
+
+        <div>
+            <h6>Hi I'm Milith</h6>
+        </div>
 </body>
 </html>
