Page two content update

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             </nav>
     </header>
     <!----------------------Main Profile ------------------------------>
-    <main>
+<main>
         <section>
             <div>
                 <h class="intro1">I'm Ui/Ux Designer</h>
@@ -60,7 +60,8 @@
                     <i class="fa-brands fa-behance"></i></a>
             </div>
         </section>
-    </main>
+</main>
+
     <!---------------------- About Section ----------------------->
     <section>
 
@@ -71,5 +72,15 @@
         <div>
             <h6>Hi I'm Milith</h6>
         </div>
+
+        <aside class="intro4">
+            <img alt="My Profile Picture" src="assets/img/Profile/aboutme.jpg">
+        </aside>
+
+        <section>
+
+            </article>
+        </section>
+    </section>
 </body>
 </html>
