--- a/index.html
+++ b/index.html
@@ -78,7 +78,21 @@
         </aside>
 
         <section>
-
+            <h1 class="about">ABOUT</h1>
+            <h3 class="intro5">Hi! I'm Milith</h3>
+            <article class="intro6">
+                <br>
+                <br>
+                My role as a UI/UX designer is to be able<br>
+                to envision my client's requirement and not<br>
+                only meet their expectation but to exceed<br>
+                it. As a creative designer, consistency is<br>
+                key to ensure all the requested work<br>
+                reaches the client on time, and always<br>
+                committed to ensure any and all changes<br>
+                are made as many times as the client<br>
+                requests to give them the utmost<br>
+                satisfactory product.
             </article>
         </section>
     </section>
