Update transition case two

--- a/assinments/Css/02 Transition/case 02/index.html
+++ b/assinments/Css/02 Transition/case 02/index.html
@@ -4,7 +4,11 @@
     <meta charset="UTF-8">
     <title>transition case 02</title>
     <link rel="stylesheet" href="../../../../assets/css/normalize.css">
-
+    <style>
+        body{
+            background-color: #242355;
+        }
+        </style>
 
 </head>
 <body>
