--- a/assinments/Css/02 Transition/case 02/index.html
+++ b/assinments/Css/02 Transition/case 02/index.html
@@ -8,7 +8,18 @@
         body{
             background-color: #242355;
         }
-        </style>
+        div{
+            left: 0;
+            right: 0;
+            top: 0;
+            bottom: 0;
+            width: 300px;
+            height: 300px;
+            position: absolute;
+            margin: auto;
+            cursor: pointer;
+        }
+    </style>
 
 </head>
 <body>
