--- a/assinments/Css/02 Transition/case 02/index.html
+++ b/assinments/Css/02 Transition/case 02/index.html
@@ -19,6 +19,17 @@
             margin: auto;
             cursor: pointer;
         }
+        body > div > h1 {
+            top: 0;
+            bottom: 0;
+            left: 0;
+            right: 0;
+            margin: auto;
+            width: 90px;
+            height: 58px;
+            color: white;
+            position: absolute;
+        }
     </style>
 
 </head>
