transition content update

--- a/assinments/Css/02 Transition/case 02/index.html
+++ b/assinments/Css/02 Transition/case 02/index.html
@@ -30,13 +30,25 @@
             color: white;
             position: absolute;
         }
+        div::before{
+            content: " ";
+            top: 0;
+            right: 0;
+            bottom: 0;
+            left: 0;
+            position: absolute;
+            background-color: #8b5959;
+            border-radius: 100%;
+            border: 15px solid white;
+            border-top: 20px solid crimson;
+        }
     </style>
 
 </head>
 <body>
 <section>
   <div>
-    <h1></h1>
+    <h1>RWAD</h1>
   </div>
 </section>
 </body>
