--- a/assinments/Css/02 Transition/case 02/index.html
+++ b/assinments/Css/02 Transition/case 02/index.html
@@ -25,7 +25,7 @@
             left: 0;
             right: 0;
             margin: auto;
-            width: 90px;
+            width: 100px;
             height: 58px;
             color: white;
             position: absolute;
@@ -40,16 +40,19 @@
             background-color: #8b5959;
             border-radius: 100%;
             border: 15px solid white;
-            border-top: 20px solid crimson;
+            border-top: 15px solid crimson;
+        }
+
+        div:hover::before{
+            transform: rotate(360deg);
+            transition: all 2s;
         }
     </style>
 
 </head>
 <body>
-<section>
   <div>
     <h1>RWAD</h1>
   </div>
-</section>
 </body>
 </html>
