Animation content update

--- a/assinments/Css/03 Animation/case 01/index.html
+++ b/assinments/Css/03 Animation/case 01/index.html
@@ -7,8 +7,17 @@
     <meta content="width=device-width initial-scale=1" name="viewport">
 
   <style>
-
-
+    div{
+      height: 60px;
+      width: 120px;
+      background-color: #ff0000;
+      border: 2px solid black;
+      border-radius: 15px;
+      animation-name: my-animation;
+      animation-direction: alternate;
+      animation-iteration-count: infinite;
+      animation-duration: 10s;
+    }
   </style>
 
 </head>
