Finish animation one

--- a/assinments/Css/03 Animation/case 01/index.html
+++ b/assinments/Css/03 Animation/case 01/index.html
@@ -16,8 +16,8 @@
 
       div{
       background-color: red;
-      width: 250px;
-      height: 80px;
+      width: 200px;
+      height: 70px;
       position: relative;
       top: 10px;
       left: 10px;
@@ -42,7 +42,18 @@
             left: 10px;
             background-color: #6F1919;
         }
-
+        50%{
+            transform: rotate(180deg);
+            top: 90vh;
+            left: 85vw;
+            background-color: deeppink;
+        }
+        75%{
+            transform: rotate(-180deg);
+            top: 10px;
+            left: 85vw;
+            background-color: #6a6047;
+        }
   </style>
 
 </head>
