--- a/assinments/Css/03 Animation/case 03/index.html
+++ b/assinments/Css/03 Animation/case 03/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Animation case three</title>
-  <link rel="stylesheet" href="../../../../assets/css/normalize.css">
-  <meta content="width=device-width initial-scale=1" name="viewport">
+    <link rel="stylesheet" href="../../../../assets/css/normalize.css">
+    <meta content="width=device-width initial-scale=1" name="viewport">
 
   <style>
     main {
@@ -18,6 +18,50 @@
       margin: auto;
       overflow: hidden;
     }
+    main > section {
+      animation-name: slider;
+      animation-duration: 10s;
+      animation-iteration-count: infinite;
+      animation-timing-function: linear;
+      animation-direction: alternate;
+      height: 100%;
+      width: 400%;
+      display: flex;
+    }
+    main > section > div {
+      height: 100%;
+      width: 100%;
+    }
+    main > section > div:nth-child(1) {
+      background: url("../../../../assets/img/animation/img10.jpg");
+      background-size: cover;
+      background-position: center;
+    }
+    main > section > div:nth-child(2) {
+      background: url("../../../../assets/img/animation/page1.webp");
+      background-size: cover;
+      background-position: center;
+    }
+
+    @keyframes slider {
+      0%, 15% {
+        transform: translateX(0);
+
+      }
+      25%, 40% {
+        transform: translateX(-25%);
+
+      }
+      50%, 70% {
+        transform: translateX(-50%);
+
+      }
+      80%, 100% {
+        transform: translateX(-75%);
+
+      }
+    }
+
   </style>
 </head>
 <body>
