case three update and finish

--- a/assinments/Css/03 Animation/case 03/index.html
+++ b/assinments/Css/03 Animation/case 03/index.html
@@ -12,8 +12,8 @@
       right: 0;
       top: 0;
       bottom: 0;
-      width: 100px;
-      height: 500px;
+      width: 900px;
+      height: 400px;
       position: absolute;
       margin: auto;
       overflow: hidden;
@@ -42,7 +42,17 @@
       background-size: cover;
       background-position: center;
     }
+    main > section > div:nth-child(3) {
+      background: url("../../../../assets/img/animation/img7.jpg");
+      background-size: cover;
+      background-position: center;
+    }
 
+    main > section > div:nth-child(4) {
+      background: url("../../../../assets/img/animation/img3.jpg");
+      background-size: cover;
+      background-position: center;
+    }
     @keyframes slider {
       0%, 15% {
         transform: translateX(0);
