--- a/assinments/Css/03 Animation/case 04/index.html
+++ b/assinments/Css/03 Animation/case 04/index.html
@@ -14,6 +14,14 @@
         body {
             margin: 0;
         }
+        section {
+            height: 100vh;
+            width: 100vw;
+            overflow: scroll;
+            background: url("assets/sky.jpg") center;
+            background-size: cover;
+            position: relative;
+        }
     </style>
 </head>
 <body>
