case four structur change

--- a/assinments/Css/03 Animation/case 04/index.html
+++ b/assinments/Css/03 Animation/case 04/index.html
@@ -22,18 +22,22 @@
             background-size: cover;
             position: relative;
         }
+        section > img:first-child {
+            position: absolute;
+            width: 200vw;
+            height: 30%;
+            top: 351px;
+            animation: move 5s infinite;
+        }
+
     </style>
 </head>
 <body>
 <section>
-    <section></section>
-    <section></section>
-    <aside>
-
-        <aside>
-
-        </aside>
-    </aside>
+    <img src="assets/road.jpg">
+    <img src="assets/city.png">
+    <img src="assets/car.png">
+    <img src="assets/wheel.png">
 </section>
 </body>
 </html>
