case four update

--- a/assinments/Css/03 Animation/case 04/index.html
+++ b/assinments/Css/03 Animation/case 04/index.html
@@ -29,14 +29,26 @@
             top: 351px;
             animation: move 5s infinite;
         }
+        section > img:nth-child(2) {
+            width: 200vw;
+            margin: auto;
+            bottom: 0;
+            right: 0;
+            left: 0;
+            position: absolute;
+            animation: move 4s infinite;
+        }
+
+
 
     </style>
 </head>
 <body>
 <section>
-    <img src="assets/road.jpg">
     <img src="assets/city.png">
+    <img src="assets/road.jpg">
     <img src="assets/car.png">
+    <img src="assets/wheel.png">
     <img src="assets/wheel.png">
 </section>
 </body>
