--- a/assinments/Css/03 Animation/case 04/index.html
+++ b/assinments/Css/03 Animation/case 04/index.html
@@ -18,9 +18,10 @@
             height: 100vh;
             width: 100vw;
             overflow: scroll;
-            background: url("assets/sky.jpg") center;
+            background: url("assets/sky.jpg") ;
             background-size: cover;
-            position: relative;
+            background-position: center;
+            position: fixed;
         }
         section > img:first-child {
             position: absolute;
@@ -36,10 +37,16 @@
             right: 0;
             left: 0;
             position: absolute;
-            animation: move 4s infinite;
+            animation: move 5s infinite;
         }
-
-
+        section > img:nth-child(3) {
+            position: fixed;
+            height: 150px;
+            width: 320px;
+            left: 645px;
+            bottom: 21%;
+        }
+ 
 
     </style>
 </head>
