Case four content update

--- a/assinments/Css/03 Animation/case 04/index.html
+++ b/assinments/Css/03 Animation/case 04/index.html
@@ -46,7 +46,16 @@
             left: 645px;
             bottom: 21%;
         }
- 
+        section > img:nth-child(4) {
+            position: fixed;
+            height: 68px;
+            width: 68px;
+            left: 866px;
+            bottom: 22%;
+            animation: rotate 10s infinite;
+        }
+
+
 
     </style>
 </head>
