--- a/assinments/Css/03 Animation/case 04/index.html
+++ b/assinments/Css/03 Animation/case 04/index.html
@@ -55,7 +55,14 @@
             animation: rotate 10s infinite;
         }
 
-
+        section > img:nth-child(5) {
+            position: fixed;
+            height: 68px;
+            width: 68px;
+            left: 669px;
+            bottom: 22%;
+            animation: rotate 10s infinite;
+        }
 
     </style>
 </head>
