--- a/assinments/Css/03 Animation/case 03/index.html
+++ b/assinments/Css/03 Animation/case 03/index.html
@@ -33,23 +33,23 @@
       width: 100%;
     }
     main > section > div:nth-child(1) {
-      background: url("../../../../assets/img/animation/img10.jpg");
+      background: url("assets/img/one.jpg");
       background-size: cover;
       background-position: center;
     }
     main > section > div:nth-child(2) {
-      background: url("../../../../assets/img/animation/page1.webp");
+      background: url("assets/img/two.jpg");
       background-size: cover;
       background-position: center;
     }
     main > section > div:nth-child(3) {
-      background: url("../../../../assets/img/animation/img7.jpg");
+      background: url("assets/img/three.jpg");
       background-size: cover;
       background-position: center;
     }
 
     main > section > div:nth-child(4) {
-      background: url("../../../../assets/img/animation/img3.jpg");
+      background: url("assets/img/four.jpg");
       background-size: cover;
       background-position: center;
     }
