--- a/assinments/Css/03 Animation/case 04/index.html
+++ b/assinments/Css/03 Animation/case 04/index.html
@@ -18,9 +18,8 @@
             height: 100vh;
             width: 100vw;
             overflow: scroll;
-            background: url("assets/sky.jpg") ;
             background-size: cover;
-            background-position: center;
+            background: url("assets/sky.jpg") center;
             position: fixed;
         }
         section > img:first-child {
