--- a/assinments/Css/03 Animation/case 04/index.html
+++ b/assinments/Css/03 Animation/case 04/index.html
@@ -86,11 +86,11 @@
 </head>
 <body>
 <section>
-    <img src="assets/city.png">
-    <img src="assets/road.jpg">
-    <img src="assets/car.png">
-    <img src="assets/wheel.png">
-    <img src="assets/wheel.png">
+    <img src="assets/city.png" alt="">
+    <img src="assets/road.jpg" alt="">
+    <img src="assets/car.png" alt="">
+    <img src="assets/wheel.png" alt="">
+    <img src="assets/wheel.png" alt="">
 </section>
 </body>
 </html>
